4 files modified, 2 added, 1 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <header-section></header-section>
+<div class ="top">
+  <h1>Product Portal</h1>
+  <button mat-stroked-button>Basic</button>
+</div>
 <footer-section></footer-section>
