6 files modified, 1 added, 1 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <header-section></header-section>
 <div class ="top">
   <h1>Product Portal</h1>
-  <button mat-stroked-button>Basic</button>
+  <button mat-stroked-button><span class="material-icons add-btn">
+add
+</span>  ADD NEW PRODUCT</button>
 </div>
 <footer-section></footer-section>
