--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@ p {
 }
 .top{
   display :flex;
-  margin: 20px;
+  margin: 40px 60px 0 40px;
   padding: 20px;
   h1{
   font-family: 'Rajdhani', sans-serif;
