--- a/src/app/cards/cards.component.scss
+++ b/src/app/cards/cards.component.scss
@@ -4,7 +4,6 @@ img{
   width: 200px;
 }
 }
-
 .card-item{
   padding: 10px;
   margin: 20px;
@@ -14,8 +13,9 @@ img{
   font-family: 'Quicksand', sans-serif;
 } 
 .icon-display {
-   transform: scale(10);
-   margin: 100px 60px;
+   transform: scale(8);
+   margin: 60px;
+   margin-top: 100px;
    color:rgb(252, 252, 252);
    align-self: center;
 }
@@ -25,8 +25,9 @@ img{
     font-weight: 600;
     padding: 10px;
     color:white;
+    font-family: 'Rajdhani', sans-serif;
   }
 }
 .card-item2{
-  background-color: rgb(179, 175, 175);
+  background-color: rgb(196, 192, 192);
 }
